src/examples/errors/25_precondition_quantifier_violation.veri
// Error: calling a function with a quantified precondition
// that cannot be satisfied at the call site

fn needs_all_positive(arr: [int; 3]) -> int
    requires forall i in 0..3 { arr[i] > 0 }
{
    arr[0]
}

fn caller() -> int {
    let arr: [int; 3] = [0; 3];
    needs_all_positive(arr)
}
